# cfc_challenge

./: .flake8  Makefile  README.md  pyproject.toml
src/cfc_challenge/: main.py
src/cfc_challenge/JSON/: hyperlinks.json  resources.json  word_count.json
src/cfc_challenge/domain/: cfc_underwriting.py
src/cfc_challenge/interfaces/: cfc_underwriting.py
tests/domain/: cfc_underwriting.py  cfcunderwriting.py  test_cfc_underwriting.py
