[tool.poetry]
name = "cfc-challenge"
version = "0.1.0"
description = ""
authors = ["Tom Neys <tomneys@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^22.12.0"
mypy = "^0.991"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py310"]
skip-numeric-underscore-normalization = true
skip-magic-trailing-comma = true

[tool.mypy]
ignore_missing_imports = true
strict_optional = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
disallow_untyped_defs = true
no_implicit_reexport = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
strict_equality = true
no_implicit_optional = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = "tests.conftest.py"
ignore_errors = true
